--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,23 @@
     font-family: 'Raleway', sans-serif;
 }
 
+/* Fixar footer */
+
+html {
+    height: 100%;
+    min-height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+}
+
+footer {
+    margin-top: auto;
+}
+
 /* Navbar */
 
 section#menu{
@@ -41,6 +58,7 @@ nav>a{
     text-decoration: none;
     font-weight: medium;
     font-family: 'Poppins', sans-serif;
+    transition: 0.5s;
 }
 
 #itens1{
@@ -53,7 +71,6 @@ nav>a{
 
 nav>a:hover { 
     color: #525151; 
-    transition: 0.5s;
     opacity: 0.7;
 
 }
@@ -155,10 +172,16 @@ img.banner{
     width: 7.813rem;
 }
 
+#bannerscat>article{
+    transition: 1s;
+}
+
 #bannerscat>article:hover{  
-        transition: 0.5s;
         opacity: 0.4;
-        
+        -webkit-transform: scale(0.95);
+        -ms-transform: scale(0.95);
+        transform: scale(0.95);
+        filter: brightness(50%);
 }
 
 .container{
@@ -185,53 +208,84 @@ section>article>a{
 /* Subtitulo */
 
 .subtitulo{
+    width: 15rem;
+    height:1rem;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+}
+
+.subtitulo>h2{
     text-align: center;
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-    padding-top: 0.313rem;
-    padding-bottom: 0.313rem;
-    border-radius: 0.625rem;
-    margin-top: 3.125rem;
-    margin-bottom: 1em;
-    margin-left: 3.125rem;
-    margin-right: 95rem;
     background-color: #311111;
     color: #FFFFFF;
     font-family: 'Poppins', sans-serif;
     font-weight: 200;
-    font-size: 1rem;
+    font-size: 1.2rem;
+    border-radius: 0.625rem;
+}
+
+.subtitulototal{
+    padding-left: 3.125rem;
 }
 
 /* Containers */
 
 .bannerscont{
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
+    
     background-color: #D9D9D9;
     border-radius: 0.625rem;
-    box-shadow: 0.125rem 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.2);
-    
+    box-shadow: 0.125rem 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.2);    
 }
 
 .bannerimg{
     padding-top: 1.25rem;
-    padding-right: 9.375rem;
-    width: 25rem;
-    
+    width: 15rem;
+    transition: 1s;
+}
+
+
+.bannerimg:hover{
+    -webkit-transform: scale(0.95);
+        -ms-transform: scale(0.95);
+        transform: scale(0.95);    
+        opacity: 0.8;
+        filter: brightness(50%);
 }
 
 .containerbanners{
     padding-left: 3.125rem;
     padding-right: 3.125rem;
-    padding-bottom: 3.125rem;
+    padding-bottom: 1.125rem;
 }
 
 .conjuntoimg{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+}
+
+/* Sobre */
+
+#texto{
+    padding-top: 5rem;
+    padding-left: 3.125rem;
+    padding-right: 3.125rem;
+}
+
+#paragrafo{
+    padding-top: 2rem;
+    text-indent: 2rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2rem;
+}
+
+#logosobre{
+    width: 30rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
     display: block;
     margin: 0 auto;
-    padding-left: 9.375rem;
-    
+    padding-right: 3.125rem;
 }
 
 /* Footer */
@@ -241,6 +295,7 @@ section>article>a{
     color: #FFFFFF;
     display: flex;
     justify-content: space-between;
+    
 }
 
 #titulofooter{
@@ -310,42 +365,15 @@ section>article>a{
         padding-top: 1.25rem;
     }
 
-
+    .bannerimg{
+        padding-top: 1.25rem;
+        width: 8rem;
+        transition: 1s;
+    }
 
     }
 
-    /* Containers */
-
-.bannerscont{
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    background-color: #D9D9D9;
-    border-radius: 0.625rem;
-    box-shadow: 0.125rem 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.2);
-    
-}
-
-.bannerimg{
-    padding-top: 1.25rem;
-    padding-right: 9.375rem;
-    width: 25rem;
-    
-}
-
-.containerbanners{
-    padding-left: 3.125rem;
-    padding-right: 3.125rem;
-    padding-bottom: 3.125rem;
-}
-
-.conjuntoimg{
-    display: block;
-    margin: 0 auto;
-    padding-left: 9.375rem;
-    
-}
-
+  
 /* Tablet */
 
 @media screen and (min-width: 768px){
@@ -396,42 +424,14 @@ section>article>a{
         padding-top: 1.25rem;
     }
 
-    
+    .bannerimg{
+        padding-top: 1.25rem;
+        width: 13rem;
+        transition: 1s;
     }
-
-    /* Containers */
-
-.bannerscont{
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    background-color: #D9D9D9;
-    border-radius: 0.625rem;
-    box-shadow: 0.125rem 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.2);
-    
 }
 
-.bannerimg{
-    padding-top: 1.25rem;
-    padding-right: 9.375rem;
-    width: 25rem;
-    
-}
-
-.containerbanners{
-    padding-left: 3.125rem;
-    padding-right: 3.125rem;
-    padding-bottom: 3.125rem;
-}
-
-.conjuntoimg{
-    display: block;
-    margin: 0 auto;
-    padding-left: 9.375rem;
-    
-}
-
-
+   
 /* Telas Grandes */
 
 @media screen and (min-width: 992px){
@@ -456,5 +456,4 @@ section>article>a{
     #bannerscat>article>a>img{
         width: 7.813rem;
     }
-    
 }
