--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,12 @@ img.banner{
     
 }
 
+#linha{
+    padding-left: 20rem;
+    padding-right: 20rem;
+    padding-top: 0.313rem;
+}
+
 /* Banners categoria */
 
 #bannerscat{
@@ -443,11 +449,11 @@ section>article>div>a{
 
 .hrsinopse2{
     padding-left: 5.313rem;
-    padding-right: 81.25rem;
+    padding-right: 60rem;
 }
 
 .subtitulosinopsebtn{
-    padding-left: 3.188rem;
+    padding-left: 2rem;
 }
 
 .capituloscontainer{
@@ -498,12 +504,107 @@ section>article>div>a{
     color: #000000;
 }
 
+/* Categorias */
+
+.titulocat{
+    padding-top: 1rem;
+}
+
+.conjcategorias{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    display: flex;
+    justify-content: start;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    background-color: #D9D9D9;
+    margin-left: 10rem;
+    margin-right: 10rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    border-radius: 0.625rem;
+    box-shadow: 0.125rem 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.2);
+    transition: 1s;
+}
+
+.conjcategorias:hover{
+    -webkit-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    transform: scale(0.95);    
+    opacity: 0.6;
+    filter: brightness(95%);
+}
+
+.conjcategorias>section>h2{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+}
+
+.tituloscont{
+    display: flex;
+    flex-direction: column;
+    padding-top: 1.5rem;
+    padding-left: 1rem;
+    font-family: 'Poppins', sans-serif;
+    
+}
+
+.tituloscont>h2{
+    padding-bottom: 0.3rem;
+    font-family: 'Poppins', sans-serif;
+    padding-right: none;
+}
+
+.tituloscont>span{
+    font-family: 'Poppins', sans-serif;
+    padding-top: 0.5rem;
+}
+
+.tituloscont>p{
+    font-family: 'Poppins', sans-serif;
+    text-indent: 2rem;
+    font-size: 1rem;
+}
+
+.conjuntoimgcat{
+    display: flex;
+    justify-content:space-evenly;
+    flex-direction: row;
+}
+
+.bannerimgcont{
+    padding-top: 1.25rem;
+    width: 13rem;
+
+    
+}
+
+.conjinformaçoes{
+    display: flex;
+    flex-direction: column;
+}
+
+#linhacat{
+    border-color: #991515;
+    
+
+}
+
+.ancora{
+    text-decoration: none;
+    color: #000000;
+}
 
 /* Smartphones */
 
 @media screen and (max-width: 767px){
     html{
         font-size: 8px;
+        max-width: 100%;
+    }
+
+    body{
+        max-width: 100%;
     }
 
     img.banner{
@@ -564,8 +665,88 @@ section>article>div>a{
         
     }
 
+    .conjcategorias{
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        display: flex;
+        justify-content: start;
+        padding-left: 3rem;
+        padding-right: 3rem;
+        background-color: #D9D9D9;
+        margin-left: 2rem;
+        margin-right: 5rem;
+        margin-top: 3rem;
+        border-radius: 0.625rem;
+        box-shadow: 0.125rem 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.2);
+        transition: 1s;
+
     }
 
+    .tituloscont>p{
+        font-family: 'Poppins', sans-serif;
+        text-indent: 2rem;
+        font-size: 0.8rem;
+        padding-right: 3rem;
+    }
+
+    .tituloscont{
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        padding-top: 1.5rem;
+        font-family: 'Poppins', sans-serif;
+    }
+
+    #linhacat{
+        border-color: #991515;
+    }
+
+    .bannerimgcont{
+        width: 15rem;
+        height: 25rem;
+}
+
+.conjuntoimgcat{
+    padding-left: none;
+}
+
+.bannersinopse{
+    width: 15rem;
+}
+
+.informaçoessinopse {
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+.subtitulototal>h2{
+    display: flex;
+    align-items: center;
+}
+
+.capituloscontainer{
+    background-color: #D9D9D9;
+    box-shadow: 0.125rem 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.2);
+    margin-top: 0.625rem;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 0.313rem;
+    padding-bottom: 0.313rem;
+    padding-left: 0.938rem;
+    padding-right: 0.625rem;
+    transition: 1s;
+}
+
+.contcapitulos{
+    padding-bottom: 1.875rem;
+}
+
+.hrsinopse2{
+    padding-left: 5.313rem;
+    padding-right: 25rem;
+
+}
+}
   
 /* Tablet */
 
@@ -629,10 +810,27 @@ section>article>div>a{
         padding-top: 1.25rem;
         padding-bottom: 0.625rem;
         width: 50rem;
-        
-       
-        
     }
+
+    .bannerimgcont{
+        width: 15rem;
+        height: 25rem;
+}
+
+.bannersinopse{
+    width: 15rem;
+}
+
+.informaçoessinopse {
+    padding-left: 5rem;
+    padding-right: 5rem;
+}
+
+.hrsinopse2{
+    padding-left: 5.313rem;
+    padding-right: 25rem;
+
+}
 }
 
    
